# super-succotash

./: .gitignore  Dockerfile.devcontainer  Dockerfile.lambda  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
apps_script/: Code.gs  README.md  app.html  index.html
automations/drive_clean_up_assistant/: handler.py
automations/file_summary_broadcast/: handler.py
automations/personal_file_activity_digest/: handler.py
common/: logging.py  storage.py
cv/id_matcher/: run_match.py
rag/: app.py
tests/: test_dups.py
